# tinysexpr

./: LICENSE  README.md  pyproject.toml  sexpr.py  tinysexpr.py
src/: tinysexpr.py
src/tests/: test_simple.py
src/tinysexpr/: __init__.py
tests/: test_simple.py
