[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinysexpr"
authors = [
    {name = "Sebastian Hack", email = "contact@s-hack.de"},
]
version = "1.0.1"
description = "A very simple S-expression parser that tries to make as little fuss as possible."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
]

[project.urls]
"GitHub" = "https://github.com/shack/tinysexpr"
