[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tinysexpr"
authors = [
    {name = "Sebastian Hack", email = "contact@s-hack.de"},
]
version = "1.3"
description = "A very simple S-expression parser that tries to make as little fuss as possible."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
]

[project.urls]
"GitHub" = "https://github.com/shack/tinysexpr"
