[project]
name = "tinysexpr"
authors = [
    {name = "Sebastian Hack", email = "contact@s-hack.de"},
]
version = "1.4.2"
description = "A very simple S-expression parser that tries to make as little fuss as possible."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
"GitHub" = "https://github.com/shack/tinysexpr"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
